--- a/parts/school/course.jade
+++ b/parts/school/course.jade
@@ -10,40 +10,102 @@ template(name='course_card')
             |#{points}
                 
             
+template(name='course_home')
+    .ui.header hi
             
-template(name='course_view')
+template(name='course_content')
+    .ui.header
+        i.content.icon
+        |calendar
+template(name='course_calendar')
+    .ui.header
+        i.calendar.icon
+        |calendar
+            
+template(name='course_groups')
+    .ui.header
+        i.users.icon
+        |groups
+            
+template(name='course_discussions')
+    .ui.header
+        i.chat.icon
+        |discussions
+
+
+template(name='course_assignments')
+    .ui.header
+        i.chat.icon
+        |assignments
+            
+template(name='course_view_layout')
+    +nav
     with current_doc
         .ui.stackable.padded.grid
             .row 
                 .four.wide.column
                     a.ui.circular.icon.button(href="/school")
                         i.university.icon
-                    a(href="/m/course" title='courses')
-                        +i name='food' cl='ui inline image pointer'
                     .ui.center.aligned.inline.header 
-                        img.ui.avatar.image(src="{{c.url image width=400 height=400 crop='fill'}}")
+                        if image
+                            img.ui.avatar.image(src="{{c.url image width=400 height=400 crop='fill'}}")
                         |#{title}
+                    .ui.fluid.vertical.menu
+                        .ui.item
+                            .header course materials
+                            .menu
+                                a.item(href="/course/#{_id}/content")
+                                    i.content.icon
+                                    |content
+                                a.item(href="/course/#{_id}/calendar")
+                                    i.calendar.icon
+                                    |calendar
+                        .item 
+                            a.header
+                                i.clock.icon
+                                |activities
+                            .menu
+                                a.item(href="/course/#{_id}/assignments")
+                                    i.content.icon
+                                    |assignments
+                                a.item(href="/course/#{_id}/discussions")
+                                    i.calendar.icon
+                                    |discussions
+                                a.item(href="/course/#{_id}/groups")
+                                    i.users.icon
+                                    |groups
+                        .item 
+                            .header 
+                                i.tasks.icon
+                                |progress
+                            .menu
+                                a.item(href="/course/#{_id}/content")
+                                    i.content.icon
+                                    |content
+                                a.item(href="/course/#{_id}/calendar")
+                                    i.calendar.icon
+                                    |calendar
                     if can_edit
                         a.edit_course(href="/course/#{_id}/edit")
                             i.big.blue.pencil.circular.link.icon
-                    .ui.header $#{price}
+                    .ui.header(href='professor')
+                        i.user.icon
+                        |#{professor}
+                    .ui.header(title='section')
+                        i.calendar.icon
+                        |#{section}
+                    a.ui.header(href=link title='link')
+                        i.link.icon
+                        |link
                     if in_dev
                         +print_this
                     +voting_full
-                    +single_doc_view key='shop_id' ref_model='shop' label='shop' direct=true        
-                    if vegan
-                        +icolorlg name='vegan-symbol' cl='ui inline image pointer' title='vegan'
-                    if vegetarian
-                        +icolorlg name='vegetarian-mark' cl='ui inline image pointer' title='vegetarian'
                     +array_view key='tags' label='tags' icon='tags' direct=true
-                    +array_view key='ingredient_tags' label='ingredients' icon='food' direct=true
-                    each courses
-                        a.ui.header(href="/menu/#{_id}/view") #{title}
                     +comments
                     .f11 #{description}
-                .twelve.wide.column
                     +image_view key='image' label='image' direct=true
- 
+                .twelve.wide.column
+                    +yield
 
 
 template(name='course_edit')
@@ -71,9 +133,5 @@ template(name='course_edit')
                     +array_edit key='tags' label='tags' direct=true
                     +array_edit key='ingredient_tags' label='ingredients' direct=true
                 .five.wide.column
-                    +number_edit key='price' direct=true
                     +boolean_edit key='published' direct=true
-                    +boolean_edit key='vegan' direct=true
-                    +boolean_edit key='vegetarian' direct=true
-                    // +single_doc_edit key='shop_id' ref_model='shop' label='shop' direct=true        
                 
