--- a/parts/account/login.jade
+++ b/parts/account/login.jade
@@ -3,7 +3,8 @@ template(name='login')
         .centered.row
             .eight.wide.column
                 .ui.center.aligned.basic.segment
-                    img.ui.centered.image(src="{{c.url 'avanti_logo' gravity='face' crop='fill'}}")
+                    // img.ui.centered.image(src="{{c.url 'avanti_logo' gravity='face' crop='fill'}}")
+                    i.big.yin.yang.icon
                     .ui.inline.grey.header login
 
                 div
