--- a/parts/account/register.jade
+++ b/parts/account/register.jade
@@ -7,17 +7,18 @@ template(name='register')
                     //- a.ui.icon.button(href="/")
                     //-     i.large.home.icon
                         
-                    div
-                    +icon name='circled' cl='ui inline image'
-                    .ui.big.inline.header Avanti registration
+                    // div
+                    // +icon name='circled' cl='ui inline image'
+                    i.big.yin.yang.icon
+                    .ui.big.inline.header registration
                 //- if message
                 //-     h4.ui.center.aligned.header #{message}
-                .ui.small.inline.header 
-                    |first name
-                .ui.fluid.input(class=login_class)
-                    input.first_name(type='text')
-                .ui.small.inline.header 
-                    |last name
+                // .ui.small.inline.header 
+                //     |first name
+                // .ui.fluid.input(class=login_class)
+                //     input.first_name(type='text')
+                // .ui.small.inline.header 
+                //     |last name
                 .ui.fluid.input(class=login_class)
                     input.last_name(type='text')
                 .ui.small.inline.header 
