--- a/parts/school/course.jade
+++ b/parts/school/course.jade
@@ -142,7 +142,7 @@ template(name='course_edit')
         .ui.stackable.padded.grid
             .row 
                 .five.wide.column
-                    a.ui.green.circular.icon.button(href="/course/#{_id}/view" title='save')
+                    a.ui.green.circular.icon.button(href="/course/#{_id}" title='save')
                         i.checkmark.big.icon
                     .ui.inline.header 
                         i.pencil.icon
