--- a/client/nav.jade
+++ b/client/nav.jade
@@ -202,13 +202,13 @@ template(name='left_sidebar')
         // a.item.toggle_sidebar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
         //     |chat
         //     i.large.chat.icon
-        if is_eric
-            a.icon.item.toggle_dev.toggle_sidebar
-                |toggle dev
-                if is_dev
-                    i.code.blue.large.icon
-                else
-                    i.code.large.icon
+        // if is_eric
+        //     a.icon.item.toggle_dev.toggle_sidebar
+        //         |toggle dev
+        //         if is_dev
+        //             i.code.blue.large.icon
+        //         else
+        //             i.code.large.icon
         if is_in_admin
             a.icon.item.toggle_admin.toggle_sidebar
                 |toggle admin
