--- a/parts/pr/post.jade
+++ b/parts/pr/post.jade
@@ -33,7 +33,6 @@ template(name='post_view')
 
             .row 
                 .four.wide.column
-                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     .ui.segment
                         .ui.header 
                             small author
@@ -51,6 +50,7 @@ template(name='post_view')
                     +voting_full
                     //- +array_view key='location_tags' label='location_tags' direct=true
                 .twelve.wide.column
+                    img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     // a.ui.header(href="/user/#{target.username}")
                     //     |#{target.username}
                     .ui.segment
@@ -106,3 +106,14 @@ template(name='post_edit')
                     +text_edit key='title' label='title' direct=true
                     +html_edit key='content' label='content' direct=true
         
+        
+        
+template(name='comments_view_small')            
+    if doc_comments.count
+        .meta
+            each doc_comments 
+                i.grey.chat.outline.icon
+                img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=user_class)
+                |#{body}
+                div
+
