--- a/parts/school/course_post.jade
+++ b/parts/school/course_post.jade
@@ -21,25 +21,26 @@ template(name='course_post_view')
         .ui.stackable.padded.grid
             .middle.aligned.row 
                 .sixteen.wide.column
-                    a(href="/course/#{course_id}")
-                        i.newspaper.circular.link.big.icon
+                    a.ui.circular.button(href="/course/#{course_id}")
+                        i.chevron.left.icon
+                        i.chalkboard.big.icon
                     .ui.large.inline.header #{title}
                     // div
                     // .ui.inline.grey.header {{from_now start_datetime}}
                     
                     if can_edit
                         a.edit_course_post(href="/course/#{course_id}/post/#{_id}/edit" title='edit')
-                            i.big.circular.link.pencil.icon
+                            i.large.circular.link.pencil.icon
 
             .row 
-                .four.wide.column
+                .three.wide.column
                     img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
-                    .ui.segment
-                        .ui.header 
-                            small author
-                        a.ui.header(href="/user/#{_author.username}") 
-                            img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                            |#{_author.username}
+                    // .ui.segment
+                    //     .ui.header 
+                    //         small author
+                    //     a.ui.header(href="/user/#{_author.username}") 
+                    //         img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                    //         |#{_author.username}
                     .ui.small.grey.header 
                         i.line.chart.icon
                         |stats
@@ -47,13 +48,21 @@ template(name='course_post_view')
                         .item #{views} views
                     each viewers
                         .ui.label #{username
-                    +array_view key='tags' label='tags' direct=true
+                    if is_admin
+                        +array_edit key='tags' label='tags' direct=true
+                    else     
+                        +array_view key='tags' label='tags' direct=true
+                    
                     +voting_full
-                    //- +array_view key='location_tags' label='location_tags' direct=true
-                .twelve.wide.column
+                    +link_edit key='link' label='link' direct=true
+
+                    +array_view key='time_tags' label='time tags' direct=true
+                .thirteen.wide.column
                     // a.ui.header(href="/user/#{target.username}")
                     //     |#{target.username}
-                    .ui.segment
+                    if raw 
+                        |!{raw}
+                    .scrolling
                         |!{content}
                     div 
                     .spacer
@@ -89,20 +98,13 @@ template(name='course_post_edit')
                     +image_edit key='image_id' label='image' direct=true
                     div 
                     +array_edit key='tags' label='tags' direct=true
-                    +boolean_edit key='published' icon='visible' direct=true
+                    +link_edit key='link' label='link' direct=true
+                    // +boolean_edit key='published' icon='visible' direct=true
                     if is_admin 
                         +text_edit key='model' label='model' direct=true
-                    //- +array_edit key='location_tags' label='location_tags' direct=true
-                    // unless published
-                    //     a.ui.fluid.green.button.submit(href="/save")
-                    //         i.checkmark.icon
-                    //         |publish
-                    // else
-                    //     .ui.basic.button.unpublish 
-                    //         |unpublish
-                    .ui.header
-                        |audience
+                    +array_edit key='time_tags' label='time tags' direct=true
                 .twelve.wide.column
                     +text_edit key='title' label='title' direct=true
                     +html_edit key='content' label='content' direct=true
+                    +raw_edit key='raw' label='raw' direct=true
         
